--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   text-align: center;
   position: relative;
-  overflow: hidden;
+  
   height: 100%;
 }
 
@@ -23,7 +23,6 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('https://cdn.pixabay.com/photo/2015/10/31/12/06/tooth-1015404_1280.jpg');
   background-size: cover;
   background-position: center;
   filter: blur(10px); /* Difuminar la imagen de fondo */
@@ -46,7 +45,6 @@ code {
 }
 
 .container {
-  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -65,7 +63,7 @@ h1 {
 h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  text-transform: uppercase;
+  
   letter-spacing: 3px;
 }
 
@@ -140,6 +138,13 @@ form {
   margin: 0 auto;
 }
 
+.card-grid img {
+  max-width: 100%; /* Limita el ancho máximo al 100% del contenedor */
+  max-height: 200px; /* Ajusta la altura máxima para que no sobresalga */
+  object-fit: cover; /* Ajusta la imagen sin distorsionar */
+  border-radius: 8px; /* Opcional: bordes redondeados */
+}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -172,12 +177,14 @@ a {
   display: inline-block;
   text-decoration: none;
   color: #fff;
-  padding: 10px 25px;
+  padding: 10px 55px;
   border-radius: 50px;
-  text-transform: uppercase;
-  font-weight: bold;
   position: relative; /* Necesario para que ::before se posicione relativo al enlace */
   transition: color 0.3s ease; /* Transición para el color */
+}
+
+.uppercase-text {
+  text-transform: uppercase;
 }
 
 a::before {
@@ -195,9 +202,9 @@ a:hover::before {
   width: 100%; /* Hace que la línea se expanda de izquierda a derecha */
 }
 
-a:hover {
-  color: #ef220b; /* Cambia el color del texto al hacer hover */
-}
+
+
+
 
 .glowing-text {
   animation: glow 1.5s ease-in-out infinite alternate;
@@ -205,7 +212,7 @@ a:hover {
 
 @keyframes glow {
   from {
-    text-shadow: 0 0 10px #ff4e50, 0 0 20px #ff4e50, 0 0 30px #ff4e50, 0 0 40px #ff4e50, 0 0 50px #ff4e50;
+    text-shadow: 0 0 10px #000000, 0 0 20px #ff4e50, 0 0 30px #ff4e50, 0 0 40px #ff4e50, 0 0 50px #ff4e50;
   }
   to {
     text-shadow: 0 0 20px #ff4e50, 0 0 30px #ff4e50, 0 0 40px #ff4e50, 0 0 60px #ff4e50, 0 0 80px #ff4e50;
