--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -282,19 +282,37 @@ tr:nth-child(even) {
   background-color: #dddddd;
 }
 
-.dark {
-  background-color: #892c2c96;
-  color: white;
+ /* body  */
+.light-theme {
+  background-color: white;
+  color: black;
 }
 
-.dark>a {
+.dark-theme {
+  background-color: black;
   color: white;
+  .card > a{
+    color: white;
+  }
+}
+
+
+
+.dark-theme nav{
+  background-color: black;
+  color: white;
+  a {
+    color: white;
+  }
+  .card > a{
+    color: white;
+  }
 }
 
 a {
   display: inline-block;
   text-decoration: none;
-  color: #fff;
+  color: #070707;
   padding: 10px 55px;
   border-radius: 50px;
   position: relative; /* Necesario para que ::before se posicione relativo al enlace */
@@ -338,10 +356,11 @@ a:hover::before {
 }
 
 .navbar {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  color: #fff;
+
+  
 }
